# Paralela-2022

./: README.md  calcPi_OMP  calcPi_OMP.c
BlurImage/: CMakeLists.txt
BlurImage/src/: main.cpp  main_mpi.cpp
BlurVideo/: .gitIgnore  CMakeLists.txt  main.cpp  mpi_hosts
BlurVideo/src/: BlurVideo.ipynb  main.cpp  main_mpi.cpp  main_omp.cpp
BlurVideo/tests/: main_test.cpp
MatrixMultiplication/: Makefile  run.sh
MatrixMultiplication/src/: main_cuda.cpp  main_cuda.cu  main_mpi.cpp  main_omp.cpp
Pi/: calcPi  calcPi.c  calcPi_OMP  calcPi_OMP.c  threads_posix.ipynb
